<resources>
    <string name="app_name" translatable="false">E-BORNES</string>
    <string name="settings_title">Settings</string>
    <string name="dep_filter_label">Department</string>
    <string name="filter_title">Filters</string>
    <string name="save_btn">Filter</string>
    <string name="noLoadMessage">You have not load all the chargers, please use filter to improve the load</string>
    <string name="title_activity_splash_screen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="InternetCheckMessage">Please check your connection</string>
    <string name="catch_phrase">Developed by Antoine Pannecoucke</string>
    <string name="text_explain">y</string>
    <string name="filter" translatable="false">filter</string>
    <string name="search_all">Without filter</string>
    <string name="zoom_switch">Zoom on you</string>
    <string name="zoom" translatable="false">zoom</string>
    <string name="power">Maximum power</string>
</resources>